[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
bincode = "1.3.3"
ethers = { version = "2.0" }
alloy-primitives = { version = "0.7.4", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7.4" }
bonsai-sdk = { version = "0.7.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.10" }
hex = "0.4.3"