[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }

risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkvm = { version = "1.0.1" }
bonsai-sdk = { version = "0.8.0" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
log = "0.4.21"
bincode = "1.3.3"
ethers = { version = "2.0" }
alloy-primitives = { version = "0.7.4", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7.4" }
hex = "0.4.3"
bytemuck = "1.16.0"
sha2 = "0.10.8"
thiserror = "1.0.61"
reqwest = "0.12.4"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }