[package]
name = "bit_bounty_risc0_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
alloy-sol-types = { version = "0.7.4" }
alloy-primitives = { version = "0.7.5", default-features = false, features = ["rlp", "serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
hex = "0.4.3"